# portproxy

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: MIGRATION.md
docs/superpowers/plans/: 2026-06-10-portproxy.md
docs/superpowers/specs/: 2026-06-10-npm-distribution-design.md  2026-06-10-portproxy-design.md
npm/: README.md  install.js  package.json
scripts/: e2e.sh
skills/portproxy/: SKILL.md
src/: config.rs  lib.rs  main.rs  naming.rs  ports.rs  proxy.rs  routes.rs  types.rs  utils.rs  workspace.rs  worktree.rs
tests/: proxy_test.rs
