[package]
name = "portproxy"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Stable named URLs for local dev servers behind a TLS-terminating reverse proxy"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[dependencies]
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "net",
    "io-util",
    "signal",
    "sync",
    "process",
    "time",
] }
hyper = { version = "1", features = ["http1", "server", "client"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
http-body-util = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
rand = "0.8"
sha2 = "0.10"
nix = { version = "0.29", features = ["signal", "process"] }
libc = "0.2"
anyhow = "1"
colored = "2"

[dev-dependencies]
tempfile = "3"

[lib]
name = "portproxy"
path = "src/lib.rs"

[[bin]]
name = "portproxy"
path = "src/main.rs"
